hphp/test/zend/good/ext/standard/tests/general_functions/bug34794.php.skipif
<?hh
<<__EntryPoint>> function main() {
if (!is_executable('/bin/cat')) echo 'skip cat not found';
}
