hphp/test/zend/bad/ext/standard/tests/general_functions/bug44667.php.skipif
<?php if (!is_executable('/bin/cat')) echo 'skip cat not found'; ?>